[package]
name = "serialize"
version = "0.1.0"
authors = ["0Phineas0 <phineas.guifontes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.114", features = ["derive"]}
serde_json = "1.0.56"
